# free_hike

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  TRACKER.md  agentic_operating_manual.md  architecture.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: launch.json
.githooks/: pre-commit
.github/workflows/: janitor.yml
android/: build.gradle  capacitor.settings.gradle  variables.gradle
android/app/: build.gradle  capacitor.build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/freehike/app/: BackgroundCompileWorker.kt  MainActivity.java  MainActivity.kt  MapCompilerPlugin.kt  PendingJobStore.kt  ThermalStateBridge.kt
android/app/src/main/java/uniffi/freehike/: freehike.kt
android/app/src/main/res/values/: strings.xml
docs/: tracker_tags.md
freehike-core/: Cargo.toml  LOOPLOG.md
freehike-core/compiler/: Cargo.toml
freehike-core/compiler/src/: engine.rs  lib.rs  thermal.rs
freehike-core/compiler/tests/: thermal_governance.rs
freehike-core/fetcher/: Cargo.toml
freehike-core/fetcher/src/: lib.rs
freehike-core/ffi/: Cargo.toml
freehike-core/ffi/bindings/: freehike.swift  freehikeFFI.h
freehike-core/ffi/bindings/uniffi/freehike/: freehike.kt
freehike-core/ffi/src/: lib.rs
freehike-core/ffi/tests/: thermal.rs
freehike-core/geom/: Cargo.toml
freehike-core/geom/src/: lib.rs
freehike-core/pbf/: Cargo.toml
freehike-core/pbf/src/: fixtures.rs  lib.rs  proto.rs  scan.rs  tile.rs
freehike-core/scripts/: mem_gate.sh
freehike-core/terrain/: Cargo.toml
freehike-core/terrain/src/: archive.rs  lib.rs  main.rs  mercator.rs  pyramid.rs  reader.rs  rgb.rs  sample.rs  webp.rs
freehike-core/tiles/: Cargo.toml
freehike-core/tiles/src/: finalize.rs  hilbert.rs  lib.rs  mvt.rs  pmtiles.rs
ios/App/App/: AppDelegate.swift  Info.plist  MainViewController.swift  MapCompilerPlugin.swift
ios/App/App.xcodeproj/: project.pbxproj
ios/App/App/FreeHikeFFI/: freehikeFFI.h  freehikeFFI.modulemap
offline_sandbox/raw_data/: innsbruck.osm.pbf  innsbruck_dem.tif
public/styles/: high_contrast_outdoor_style.json
research/: On-Device Map Compilation - Feasibility, Architecture, and Implementation Plan.md  implementation_plan_phase3.md
scripts/: add_spdx_headers.sh  build_test_graph.js  compile_sandbox_data.sh  copy_valhalla_wasm.mjs  prune_glyphs.sh  tracker-janitor.mjs  tracker-janitor.test.mjs
src/: index.css  valhalla.js
src/experimental/: DropboxSync.ts  GoogleDriveSync.ts  README.md
src/plugins/: MapCompiler.ts
src/services/: archiveValidation.test.ts  archiveValidation.ts  handoffProgress.test.ts  handoffProgress.ts  opfsMover.test.ts  opfsMover.ts  pmtilesRegistry.ts  regionBootPolicy.test.ts  regionBootPolicy.ts  regionCompiler.ts
src/shared/: db.ts  types.ts
src/store/: compilerStore.test.ts  compilerStore.ts  mapStore.ts
src/test/: fakeFilesystem.ts  fakeOpfs.test.ts  fakeOpfs.ts  resetStores.ts  setup.ts
src/ui/: App.tsx  main.tsx
src/ui/components/: BackgroundHandoffBar.tsx  CloudSyncPanel.tsx  DownloadProgressBar.tsx  ElevationProfile.tsx  MapView.tsx  RegionPicker.tsx  RegionSelectorOverlay.tsx  SavedRoutesPanel.tsx
src/ui/services/: cryptoPKCE.ts  gpxSerializer.test.ts  gpxSerializer.ts  locationTracker.ts  storageGuard.test.ts  storageGuard.ts  syncDB.ts
src/ui/services/sync/: DropboxSync.ts  GoogleDriveSync.ts
src/workers/: dummy.worker.ts  mapData.worker.ts  opfsRetry.test.ts  opfsRetry.ts  routing.worker.ts  spatial.worker.ts  tsconfig.json
