[workspace]
resolver = "2"
members = ["compiler", "pbf", "terrain", "tiles", "ffi", "fetcher", "geom"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FreeHike"]
license = "MIT"

[workspace.dependencies]
uniffi = "0.29"
# Out-of-core storage pair (Phase 3+): zero-copy reads of multi-GB inputs and
# a disk-backed index with a bounded cache, per the 50MB RAM ceiling.
redb = "4"
memmap2 = "0.9"
# PBF wire-format decoding (Phase 3): prost message structs are hand-derived
# in pbf/src/proto.rs — no protoc/build.rs in the mobile cross-compile path.
prost = "0.14"
miniz_oxide = "0.9"
# Gzip for MVT payloads + PMTiles internal compression (Phase 5): pure-Rust
# backend (miniz_oxide — the same inflate core Pass 1 already ships), no
# zlib-sys in the mobile cross-compile path.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
compiler = { path = "compiler" }
pbf = { path = "pbf" }
terrain = { path = "terrain" }
fetcher = { path = "fetcher" }
tiles = { path = "tiles" }
geom = { path = "geom" }

# Release profile tuned for mobile distribution: maximum optimization with full
# LTO so the iOS .a / Android .so ship lean and fast.
#
# `panic = "abort"` is deliberately NOT set: UniFFI converts Rust panics into
# typed foreign-language errors by unwinding and catching at the FFI boundary
# (operating manual, L4 rules). Aborting on panic would turn every internal bug
# into an uncatchable native crash on the user's phone.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
