[workspace]
resolver = "2"
members = ["compiler", "pbf", "terrain", "tiles", "ffi", "fetcher", "geom"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FreeHike contributors"]
license = "Apache-2.0"
repository = "https://github.com/freehike/freehike"

[workspace.dependencies]
uniffi = "0.29"
# Out-of-core storage pair (Phase 3+): zero-copy reads of multi-GB inputs and
# a disk-backed index with a bounded cache, per the 50MB RAM ceiling.
redb = "4"
memmap2 = "0.9"
# PBF wire-format decoding (Phase 3): prost message structs are hand-derived
# in pbf/src/proto.rs — no protoc/build.rs in the mobile cross-compile path.
prost = "0.14"
miniz_oxide = "0.9"
# Gzip for MVT payloads + PMTiles internal compression (Phase 5): pure-Rust
# backend (miniz_oxide — the same inflate core Pass 1 already ships), no
# zlib-sys in the mobile cross-compile path.
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# Terrain pipeline (Phase 6): pure-Rust pair — `tiff` decodes single internal
# GeoTIFF chunks (256×256 tiles on the DEM fixture) by byte-range with the
# weezl LZW core, `image`/image-webp emits lossless Terrain-RGB WebP. The
# richer `geotiff` wrapper is deliberately NOT used: its only read path
# (`GeoTiff::read` → `read_image()`) decodes the full raster, which breaks the
# 50MB windowed-read posture. No GDAL, no C codecs in the mobile cross-compile
# path.
tiff = { version = "0.11", default-features = false, features = ["lzw"] }
image = { version = "0.25", default-features = false, features = ["webp"] }
# Thermal-governed parallelism (Phase 8): one custom capped ThreadPool +
# wave-based admission in `compiler::thermal`. The GLOBAL rayon pool is
# never initialized — pool width is fixed at construction, so governance
# works by admission control, not pool resizing. Pure Rust, no C in the
# mobile cross-compile path.
rayon = "1"
# Lifecycle tracing across the FFI boundary: the `log` facade in the core
# crates, backed by android_logger (ffi crate, Android targets only) so
# every state transition / lock event / recovery is greppable in logcat by
# jobId. Facade-only elsewhere — hosts opt in.
log = "0.4"
# Advisory per-job slice lock (`{job_id}.lock`, flock-based): serializes
# runners across threads AND processes; the kernel releases it on process
# death, so a crash can never wedge a job.
fs2 = "0.4"
# Real-filesystem test scaffolding (dev-only): the durability tests operate
# on genuine directories/renames — never mocked fs.
tempfile = "3"
compiler = { path = "compiler" }
pbf = { path = "pbf" }
terrain = { path = "terrain" }
fetcher = { path = "fetcher" }
tiles = { path = "tiles" }
geom = { path = "geom" }

# Release profile tuned for mobile distribution: maximum optimization with full
# LTO so the iOS .a / Android .so ship lean and fast.
#
# `panic = "abort"` is deliberately NOT set: UniFFI converts Rust panics into
# typed foreign-language errors by unwinding and catching at the FFI boundary
# (operating manual, L4 rules). Aborting on panic would turn every internal bug
# into an uncatchable native crash on the user's phone.
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
