[package]
name = "compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
pbf = { workspace = true }
# Real Finalize phase (P5.C1): MVT encode + PMTiles v3 assembly drivers.
tiles = { workspace = true }
# Thermal governance (P8.C1): governed custom ThreadPool in `thermal`.
rayon = { workspace = true }

[dev-dependencies]
# Synthetic-PBF builders for the integrated Pass-1 engine tests.
pbf = { workspace = true, features = ["fixtures"] }
# Tile grid math for asserting Pass-3 binning results.
geom = { workspace = true }
