[package]
name = "ffi"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "UniFFI boundary exposing the FreeHike compiler to the Swift and Kotlin mobile shells"

[lib]
# The library name determines the native artifact names the mobile shells
# load: libfreehike_ffi.a (iOS, staticlib) and libfreehike_ffi.so (Android,
# cdylib). Plain "lib" is kept so `cargo test` and future workspace consumers
# can link it as a normal Rust crate.
name = "freehike_ffi"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
uniffi = { workspace = true }
compiler = { workspace = true }
# Lifecycle tracing across the boundary (jobId-tagged logcat lines).
log = { workspace = true }

# The log-facade backend for the Android .so: routes `log` records to
# logcat under the "freehike-core" tag. Initialized once per process at
# the first exported-fn entry (see `ensure_logging`); other targets keep
# the facade unbound (tests/hosts opt in themselves).
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15"

[features]
# Enables the `uniffi-bindgen` CLI binary used in Phase 1 to generate the
# Swift/Kotlin bindings (`cargo run -p ffi --features cli --bin uniffi-bindgen`).
cli = ["uniffi/cli"]

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi_bindgen.rs"
required-features = ["cli"]

[dev-dependencies]
# Synthetic-PBF fixtures: compile_chunk tests exercise the real Pass 1.
pbf = { workspace = true, features = ["fixtures"] }
