[package]
name = "pbf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
memmap2 = { workspace = true }
miniz_oxide = { workspace = true }
prost = { workspace = true }
redb = { workspace = true }

[features]
# Exposes the synthetic-PBF builders in `fixtures` to downstream test suites
# (compiler/ffi dev-dependencies). Never enable in a production dependency.
fixtures = []
