[package]
name = "pbf"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Streaming OSM PBF decoder and three-pass extraction pipeline with an on-flash redb index"

[dependencies]
# Phase 4 (P4.C2): RDP simplification + Liang-Barsky clipping + tile grid
# math for the Pass 3 tile-binning driver. Workspace-internal, zero deps.
geom = { workspace = true }
memmap2 = { workspace = true }
miniz_oxide = { workspace = true }
prost = { workspace = true }
redb = { workspace = true }

[features]
# Exposes the synthetic-PBF builders in `fixtures` to downstream test suites
# (compiler/ffi dev-dependencies). Never enable in a production dependency.
fixtures = []
