[package]
name = "terrain"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Windowed GeoTIFF reads to Terrain-RGB WebP tiles and terrain PMTiles assembly"

[dependencies]
tiff = { workspace = true }
image = { workspace = true }
# PMTiles v3 byte-level writer + Hilbert tile IDs (Phase-5 building blocks,
# reused for terrain.pmtiles assembly in P6.C3).
tiles = { workspace = true }

# Archive-shape tests gunzip the PMTiles internal sections.
[dev-dependencies]
flate2 = { workspace = true }

# Dev CLI (P6.C1): cut a single Terrain-RGB WebP tile from a DEM window.
# Bin targets are never pulled into the ffi cross-compile, so this stays
# host-side only.
[[bin]]
name = "terrain-tile"
path = "src/main.rs"
